# jetbrains-web-app-exercise

./: Cargo.toml  Dockerfile  README.md
.sqlx/: query-1c03b2123b84fc741cd1a66d0858b2915f43e3abdbda8048e01aaccd9b9a260a.json  query-4f17c842c8407460631eca641dd51a5700463ba3d51a440c4fdaef2b9b9a87fe.json
migrations/: 20241020191952_initial.sql
src/: home.html  main.rs
